--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-do List</title>
   <link rel="stylesheet" href="css/myStyles.css">
+  <link rel="icon" href="data:,">
   <!--Embedded Google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
